[gd_scene load_steps=9 format=3 uid="uid://c207dqp8bvfn6"]

[ext_resource type="Texture2D" uid="uid://c3jgqpsvcvdeb" path="res://Sprite/Cards/upgrade_bg.png" id="1_qxw41"]
[ext_resource type="Script" path="res://Scripts/UpgradePanel/ShopPanell.gd" id="1_r22dp"]
[ext_resource type="Texture2D" uid="uid://bjst3wn35n1t4" path="res://Sprite/Cards/Icons.png" id="2_fl5if"]
[ext_resource type="LabelSettings" uid="uid://dhanq3p82xsba" path="res://Font/new_label_settings.tres" id="3_7i0p8"]
[ext_resource type="Shader" path="res://Shader/WavyText.gdshader" id="4_01mgo"]
[ext_resource type="FontFile" uid="uid://ds5x2rjnc24oi" path="res://Font/ThaleahFat/ThaleahFat.ttf" id="5_3ist3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u2u0d"]
shader = ExtResource("4_01mgo")
shader_parameter/height = 3.0
shader_parameter/frequency = 20.0
shader_parameter/speed = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_bpepw"]
font = ExtResource("5_3ist3")
font_size = 72

[node name="ShopPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r22dp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.239216)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(570, 248)
theme_override_constants/separation = 18
alignment = 1

[node name="Option1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_qxw41")
stretch_mode = 2

[node name="Icon" type="Sprite2D" parent="HBoxContainer/Option1"]
position = Vector2(189, 133)
scale = Vector2(5, 5)
texture = ExtResource("2_fl5if")
hframes = 16
vframes = 29

[node name="Label" type="Label" parent="HBoxContainer/Option1"]
layout_mode = 0
offset_left = 54.0
offset_top = 223.0
offset_right = 320.0
offset_bottom = 431.0
text = "testestestsetsetsetsetsetsetsetsetsetsetsetsetset"
label_settings = ExtResource("3_7i0p8")
horizontal_alignment = 1
autowrap_mode = 1

[node name="Option2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_qxw41")
stretch_mode = 2

[node name="Icon" type="Sprite2D" parent="HBoxContainer/Option2"]
position = Vector2(189, 133)
scale = Vector2(5, 5)
texture = ExtResource("2_fl5if")
hframes = 16
vframes = 29

[node name="Label" type="Label" parent="HBoxContainer/Option2"]
layout_mode = 0
offset_left = 54.0
offset_top = 223.0
offset_right = 320.0
offset_bottom = 431.0
text = "testestestsetsetsetsetsetsetsetsetsetsetsetsetset"
label_settings = ExtResource("3_7i0p8")
horizontal_alignment = 1
autowrap_mode = 1

[node name="Option3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_qxw41")
stretch_mode = 2

[node name="Icon" type="Sprite2D" parent="HBoxContainer/Option3"]
position = Vector2(189, 133)
scale = Vector2(5, 5)
texture = ExtResource("2_fl5if")
hframes = 16
vframes = 29

[node name="Label" type="Label" parent="HBoxContainer/Option3"]
layout_mode = 0
offset_left = 54.0
offset_top = 223.0
offset_right = 320.0
offset_bottom = 431.0
text = "testestestsetsetsetsetsetsetsetsetsetsetsetsetset"
label_settings = ExtResource("3_7i0p8")
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label" type="Label" parent="."]
material = SubResource("ShaderMaterial_u2u0d")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -244.0
offset_top = 46.0
offset_right = 244.0
offset_bottom = 101.0
grow_horizontal = 2
text = "choose an upgrade"
label_settings = SubResource("LabelSettings_bpepw")

[connection signal="mouse_entered" from="HBoxContainer/Option1" to="." method="_on_option_1_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Option1" to="." method="_on_option_1_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/Option2" to="." method="_on_option_2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Option2" to="." method="_on_option_2_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/Option3" to="." method="_on_option_3_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Option3" to="." method="_on_option_3_mouse_exited"]
